# sem_python

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/fastapi/: Dockerfile
docker/flask/: Dockerfile
migrations/: env.py
migrations/versions/: 0001_create_users_and_predictions.py
scripts/: train_model.py
src/sem_python/: __init__.py
src/sem_python/domain/: entities.py  exceptions.py  repositories.py
src/sem_python/infrastructure/: db.py  logging.py  models.py  repositories.py  security.py  settings.py
src/sem_python/ml_api/: __init__.py  main.py  model.py  schemas.py
src/sem_python/services/: auth.py  history.py
src/sem_python/web_app/: __init__.py  app.py  auth.py  forms.py  http_client.py  routes.py
src/sem_python/web_app/static/: styles.css
src/sem_python/web_app/templates/: base.html  history.html  login.html  predict.html  register.html
tests/: test_auth_service.py  test_history_service.py  test_ml_api.py
