[project]
name = "sem-python"
version = "0.1.0"
description = "Semester ML service with Flask, FastAPI, PostgreSQL and Docker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.1",
    "fastapi>=0.115.0",
    "flask>=3.0.0",
    "flask-wtf>=1.2.1",
    "gunicorn>=22.0.0",
    "httpx>=0.27.0",
    "joblib>=1.4.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
    "werkzeug>=3.0.0",
]

[dependency-groups]
dev = [
    "commitizen>=3.29.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sem_python"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "S", "RUF"]
ignore = ["RUF001", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105"]
"migrations/**/*.py" = ["ANN", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "flask_wtf.*",
    "joblib.*",
    "sklearn.*",
    "wtforms.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sem_python.web_app.forms"]
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
